manifests/argocd-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  creationTimestamp: null
  name: argocd
  namespace: argocd
spec:
  hostnames:
   - argocd.lab.jake-watson.co.uk
  parentRefs:
   - name: cilium-gateway
     namespace: default
  rules:
   - backendRefs:
     - kind: Service
       name: argocd-server
       port: 80
     matches:
     - path:
         type: PathPrefix
         value: /
