manifests/foundry-vtt.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: foundry-vtt
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
spec:
  replicas: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: foundry-vtt
  template:
    metadata:
      labels:
        app: foundry-vtt
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - foundryvtt
                        - audiobookshelf
                topologyKey: kubernetes.io/hostname
      containers:
      - name: foundry-vtt
        image: felddy/foundryvtt:13.347.0
        ports:
        - containerPort: 30000
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: false
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2560Mi

        volumeMounts:
        - name: foundry-vtt
          mountPath: /data-old
        #- name: foundry-vtt-world-data
        #  mountPath: /data/Data/worlds
        - name: foundry-vtt-not-world-data
          mountPath: /data
      volumes:
      - name: foundry-vtt-not-world-data
        nfs:
          server: "192.168.200.184"
          path: "/volume1/Nomad/foundry-vtt"
      - name: foundry-vtt
        persistentVolumeClaim:
          claimName: foundry-vtt
      - name: foundry-vtt-world-data
        persistentVolumeClaim:
          claimName: foundry-vtt-world-data
---
apiVersion: v1
kind: Service
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
spec:
  selector:
    app: foundry-vtt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 30000
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: foundry-vtt
  namespace: foundry-vtt
spec:
  hostnames:
    - foundry-vtt.lab.jake-watson.co.uk
  parentRefs:
    - name: cilium-gateway-external
      namespace: default
  rules:
    # Long timeout to support WebSocket connections (required for Foundry VTT real-time sync)
    - timeouts:
        backendRequest: 0s   # no ceiling for long-lived WebSocket connections
      backendRefs:
        - name: foundry-vtt
          port: 80
