manifests/hubble-httproute.yaml

apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ui-hubble
  namespace: kube-system
spec:
  hostnames:
   - hubble.lab.jake-watson.co.uk
  parentRefs:
   - name: cilium-gateway
     namespace: default
  rules:
   - backendRefs:
     - name: hubble-ui
       port: 80
