manifests/kube-prometheus-stack.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kube-prometheus-stack
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1beta1
metadata:
  name: ui-kube-prometheus-stack
  namespace: kube-prometheus-stack
spec:
  hostnames:
    - grafana.lab.jake-watson.co.uk
  parentRefs:
  - name: cilium-gateway
    namespace: default
  rules:
  - backendRefs:
         - name: kube-prometheus-stack-grafana
           port: 80
