manifests/longhorn-application.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/warn-version: latest
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ui-longhorn
  namespace: longhorn-system
spec:
       hostnames:
       - longhorn.lab.jake-watson.co.uk
       parentRefs:
       - name: cilium-gateway
         namespace: default
       rules:
       - backendRefs:
              - name: longhorn-frontend
                port: 80
