manifests/cilium-l7-visability-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: "l7-visibility"
spec:
  endpointSelector:
    matchLabels:
      "app.kubernetes.io/instance": "argocd"
  egress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
  ingress:
  - toPorts:
    - ports:
      - port: "443"
        protocol: TCP
      rules:
        dns:
        - matchPattern: "*"
